fixed word break in ticket comments checked out the ticket list compare function - it's fucked and doesn't handle random date strings which is why new tickets doesn't work disabled new tickets view thanks to this disabled new tickets in actual view as wel fixed a bug where undefined is used as a css class

--- a/client/src/app-components/ticket-event.scss
+++ b/client/src/app-components/ticket-event.scss
@@ -47,7 +47,7 @@
 
     &__comment {
         position: relative;
-        word-break: break-all;
+        word-break: break-word;
 	
 	&-type {
 		text-align: center;
