--- a/client/src/app/admin/panel/admin-panel-menu.scss
+++ b/client/src/app/admin/panel/admin-panel-menu.scss
@@ -4,3 +4,7 @@
         display: inline-flex;
     }
 }
+
+.font-weight-bold {
+	font-weight: bold;
+}
